fix for scrollbar overtaking filter menu

--- a/extensions/Reporting/Report/SpecialPages/CSGARS/Sops/style.css
+++ b/extensions/Reporting/Report/SpecialPages/CSGARS/Sops/style.css
@@ -358,7 +358,8 @@ table.wikitable tr.deleted {
 }
 
 #filter-container {
-  overflow-y: scroll;
+  overflow-y: auto;
+  padding-right: 16px;
   overflow-x: hidden;
   width: 100%;
   height: -moz-calc(100% - 45px);
